--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             justify-content: center;
             align-items: center;
         }
+        @media only screen and (max-width: 800px;){
+            .lists {
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr 1fr;
+            }
+        }
     </style>
     <header>
         <h1 id="cofeName"> نام کافه</h1>
@@ -164,4 +170,5 @@
         
     </script>
 </body>
+
 </html>
