--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa-IR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +35,8 @@
             list-style: none; 
             padding: 0  0 15px 0;  
             margin:0px;
+            border: 2px solid white;
+            border-radius: 10px;
         }
         .lists ul li {
             margin: 7px 0px;
@@ -172,3 +174,4 @@
 </body>
 
 </html>
+
