--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         }
         @media only screen and (max-width: 1000px;){
             .lists {
+                display: grid;
                 grid-template-columns: 1fr;
                 grid-template-rows: 1fr 1fr 1fr 1fr;
             }
@@ -174,5 +175,6 @@
 </body>
 
 </html>
+
 
 
